--- a/learning journey css/css/style.css
+++ b/learning journey css/css/style.css
@@ -1,6 +1,6 @@
 html, 
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 0;
     padding: 0;
     max-width: 100%;
